Add JWT authentication and